<resources>
    <string name="app_name">NewsApp</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="sports">Sports</string>

    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_technology">Technology</string>
    <string name="title_science">Science</string>
    <string name="title_business">Business</string>
    <string name="title_health">Health</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_general">General</string>
    <string name="title_sports">Sports</string>


</resources>