<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/technology" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/science" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/business" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/health" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/entertainment" />
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/general" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/sports" />
    </group>


</menu>
