<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsapp.ui.ScienceFragment"
        android:label="@string/science"
        tools:layout="@layout/science_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newsapp.ui.gallery.TechnologyFragment"
        android:label="@string/technology"
        tools:layout="@layout/technology_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newsapp.ui.EntertainmentFragment"
        android:label="@string/entertainment"
        tools:layout="@layout/entertainment_fragment" />
</navigation>